# FreelanceDash1

./: .gitignore  .replit  README.md  app.py  asset_bundler.py  base.html.bak  errors.py  events.py  google_auth.py  mail.py  main.py  models.py  nats_client.py  performance.py  pyproject.toml  replit.md  worker.py
admin/: __init__.py  decorators.py  routes.py
api/: __init__.py  routes.py
attached_assets/: Pasted-2025-03-23-07-45-46-018-WARNING-Slow-request-detected-2-3750s-GET-invoices-19-2025-03-23-07-4-1742716069931.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-invoices-detail-html-Traceback-most-recent-1739097498583.txt  Pasted-The-PDF-generation-in-invoices-routes-py-uses-ReportLab_1778100916874.txt  Pasted-This-Flask-SQLAlchemy-project-has-two-parallel-DB-migra_1778078565093.txt  Pasted-TypeError-TypeError-Choices-cannot-be-None-Traceback-most-recent-call-last-File-home-runn-1739106088842.txt  Pasted-TypeError-TypeError-str-object-is-not-callable-Traceback-most-recent-call-last-File-home-1739125961952.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-str-object-has-no-attribute-label-Traceback-1739107511389.txt
auth/: forms.py  routes.py
clients/: forms.py  routes.py
docs/: nats.md
faq/: routes.py
invoices/: __init__.py  forms.py  pdf_generator.py  routes.py
notifications/: routes.py  services.py
polar/: __init__.py  features.py  models.py  polar_api.py  routes.py
projects/: forms.py  routes.py
scripts/: post-merge.sh
settings/: forms.py  routes.py
subscribers/: __init__.py  base.py  notifications.py
(+97 files in other folders)
