[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "sqlalchemy>=2.0.37",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.1",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "jinja2>=3.1.5",
    "flask-migrate>=4.1.0",
    "pytest>=9.0.3",
    "redis>=5.0.0",
    "oauthlib>=3.3.1",
    "nats-py>=2.14.0",
]
